--- a/eng/pipelines/templates/steps/build-test-typespec.yaml
+++ b/eng/pipelines/templates/steps/build-test-typespec.yaml
@@ -29,14 +29,15 @@ steps:
     displayName: "Create and install npm tarball"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go
 
-  - script: |
-      pnpm tspcompile --emitter-installed --verbose
-      pnpm -w modtidy $pwd 2>&1
-      git add -A .
-      git diff --staged -w 1>&2
-    displayName: "Regenerate TypeSpec Tests"
-    workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go/test
-    failOnStderr: true
+  - ${{ if eq(parameters.Nightly, false) }}:
+    - script: |
+        pnpm tspcompile --emitter-installed --verbose
+        pnpm -w modtidy $pwd 2>&1
+        git add -A .
+        git diff --staged -w 1>&2
+      displayName: "Regenerate TypeSpec Tests"
+      workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go/test
+      failOnStderr: true
 
   - script: |
       set -e
