--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,7 +5,7 @@
 /packages/autorest.go         @chlowell @jhendrixMSFT @RickWinter
 /packages/codegen.go          @chlowell @jhendrixMSFT @RickWinter
 /packages/codemodel.go        @chlowell @jhendrixMSFT @RickWinter
-/packages/typespec-go         @chlowell @jhendrixMSFT @RickWinter
+/packages/typespec-go         @chlowell @jhendrixMSFT @RickWinter @lirenhe
 
 # autorest.gotest
 /packages/autorest.gotest     @ArcturusZhang @lirenhe @tadelesh
