--- a/eng/pipelines/templates/steps/build-test-typespec.yaml
+++ b/eng/pipelines/templates/steps/build-test-typespec.yaml
@@ -32,8 +32,10 @@ steps:
   - script: |
       pnpm tspcompile --emitter-installed --verbose
       pnpm -w modtidy $pwd 2>&1
-      git add -A .
-      git diff --staged -w 1>&2
+      if [ "${{ parameters.Nightly }}" = "false" ]; then
+        git add -A .
+        git diff --staged -w 1>&2
+      fi
     displayName: "Regenerate TypeSpec Tests"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go/test
     failOnStderr: true
