--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -50,23 +50,23 @@
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
     "@azure-tools/azure-http-specs": "0.1.0-alpha.19",
-    "@azure-tools/typespec-autorest": "^0.57.0",
-    "@azure-tools/typespec-azure-core": "^0.57.0",
-    "@azure-tools/typespec-azure-resource-manager": "^0.57.0",
-    "@azure-tools/typespec-client-generator-core": "^0.57.2",
+    "@azure-tools/typespec-autorest": "0.57.0",
+    "@azure-tools/typespec-azure-core": "0.57.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.57.0",
+    "@azure-tools/typespec-client-generator-core": "0.57.2",
     "@types/node": "catalog:",
-    "@typespec/compiler": "^1.1.0",
-    "@typespec/events": "~0.71.0",
-    "@typespec/http": "^1.1.0",
+    "@typespec/compiler": "1.1.0",
+    "@typespec/events": "0.71.0",
+    "@typespec/http": "1.1.0",
     "@typespec/http-specs": "0.1.0-alpha.23",
-    "@typespec/openapi": "^1.1.0",
-    "@typespec/rest": "~0.71.0",
+    "@typespec/openapi": "1.1.0",
+    "@typespec/rest": "0.71.0",
     "@typespec/spector": "0.1.0-alpha.15",
-    "@typespec/sse": "~0.71.0",
-    "@typespec/streams": "~0.71.0",
-    "@typespec/versioning": "~0.71.0",
-    "@typespec/xml": "~0.71.0",
-    "@typespec/tspd": "~0.71.0",
+    "@typespec/sse": "0.71.0",
+    "@typespec/streams": "0.71.0",
+    "@typespec/versioning": "0.71.0",
+    "@typespec/xml": "0.71.0",
+    "@typespec/tspd": "0.71.0",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
