--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -49,24 +49,24 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.24-dev.1",
-    "@azure-tools/typespec-autorest": "0.59.0-dev.2",
-    "@azure-tools/typespec-azure-core": "0.59.0-dev.3",
-    "@azure-tools/typespec-azure-resource-manager": "0.59.0-dev.2",
-    "@azure-tools/typespec-client-generator-core": "0.59.0-dev.5",
+    "@azure-tools/azure-http-specs": "0.1.0-alpha.23",
+    "@azure-tools/typespec-autorest": "0.58.0",
+    "@azure-tools/typespec-azure-core": "0.58.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.58.0",
+    "@azure-tools/typespec-client-generator-core": "0.58.2",
     "@types/node": "catalog:",
-    "@typespec/compiler": "1.3.0-dev.7",
-    "@typespec/events": "0.73.0-dev.2",
-    "@typespec/http": "1.3.0-dev.2",
-    "@typespec/http-specs": "0.1.0-alpha.25-dev.1",
-    "@typespec/openapi": "1.3.0-dev.2",
-    "@typespec/rest": "0.73.0-dev.2",
-    "@typespec/spector": "0.1.0-alpha.17-dev.1",
-    "@typespec/sse": "0.73.0-dev.2",
-    "@typespec/streams": "0.73.0-dev.2",
+    "@typespec/compiler": "1.2.1",
+    "@typespec/events": "0.72.1",
+    "@typespec/http": "1.2.1",
+    "@typespec/http-specs": "0.1.0-alpha.24",
+    "@typespec/openapi": "1.2.1",
+    "@typespec/rest": "0.72.1",
+    "@typespec/spector": "0.1.0-alpha.16",
+    "@typespec/sse": "0.72.1",
+    "@typespec/streams": "0.72.1",
     "@typespec/tspd": "0.72.1",
-    "@typespec/versioning": "0.73.0-dev.2",
-    "@typespec/xml": "0.73.0-dev.2",
+    "@typespec/versioning": "0.72.1",
+    "@typespec/xml": "0.72.1",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
     "eslint": "catalog:",
@@ -75,35 +75,13 @@
     "vitest": "catalog:"
   },
   "peerDependencies": {
-    "@azure-tools/typespec-client-generator-core": "0.59.0-dev.5",
-    "@typespec/compiler": "1.3.0-dev.7",
-    "@typespec/http": "1.3.0-dev.2"
+    "@azure-tools/typespec-client-generator-core": "^0.58.1",
+    "@typespec/compiler": "^1.2.1",
+    "@typespec/http": "^1.2.1"
   },
   "dependencies": {
     "@azure-tools/codegen": "catalog:",
     "@azure-tools/linq": "catalog:",
     "source-map-support": "0.5.21"
-  },
-  "overrides": {
-    "@typespec/compiler": "1.3.0-dev.7",
-    "@typespec/http": "1.3.0-dev.2",
-    "@typespec/openapi": "1.3.0-dev.2",
-    "@typespec/rest": "0.73.0-dev.2",
-    "@typespec/versioning": "0.73.0-dev.2",
-    "@typespec/xml": "0.73.0-dev.2",
-    "@typespec/events": "0.73.0-dev.2",
-    "@typespec/sse": "0.73.0-dev.2",
-    "@typespec/streams": "0.73.0-dev.2",
-    "@typespec/http-specs": "0.1.0-alpha.25-dev.1",
-    "@typespec/spector": "0.1.0-alpha.17-dev.1",
-    "@typespec/spec-api": "0.1.0-alpha.8-dev.1",
-    "@azure-tools/typespec-client-generator-core": "0.59.0-dev.5",
-    "@azure-tools/typespec-azure-core": "0.59.0-dev.3",
-    "@azure-tools/typespec-azure-resource-manager": "0.59.0-dev.2",
-    "@azure-tools/typespec-azure-rulesets": "0.59.0-dev.1",
-    "@azure-tools/typespec-autorest": "0.59.0-dev.2",
-    "@azure-tools/azure-http-specs": "0.1.0-alpha.24-dev.1",
-    "@typespec/eslint-config-typespec": "0.56.0-dev.1",
-    "@typespec/library-linter": "0.73.0-dev.2"
   }
 }
