--- a/eng/pipelines/sdk-regenerate.yml
+++ b/eng/pipelines/sdk-regenerate.yml
@@ -1,18 +1,15 @@
-trigger:
-  branches:
-    include:
-      - main
-
-schedules:
-- cron: '0 0 * * *'
-  displayName: Daily midnight build to regenerate SDK
-  branches:
-    include:
-    - main
-
+trigger: none
 pr: none
 
+parameters:
+- name: UseLatestSpec
+  default: false
+  values:
+  - false
+  - true
+
 variables:
+  - template: /eng/pipelines/variables/globals.yml
   - template: /eng/pipelines/templates/variables/image.yml
   - group: Release Secrets for GitHub
 
@@ -39,9 +36,9 @@ jobs:
   - checkout: azure-sdk-for-go
 
   - task: NodeTool@0
-    displayName: 'Install Node.js 20.x'
+    displayName: 'Install Node.js $(NodeVersion)'
     inputs:
-      versionSpec: '20.x'
+      versionSpec: '$(NodeVersion)'
 
   - script: npm install -g pnpm@9.5.0
     displayName: Install pnpm 9.5.0
@@ -61,10 +58,10 @@ jobs:
   - script: npm install -g @azure-tools/typespec-client-generator-cli
     displayName: 'Install tsp-client'
 
-  # - script: |
-  #     python3 $(Build.SourcesDirectory)/autorest.go/eng/scripts/sdk_regenerate.py --sdk-root=$(Build.SourcesDirectory)/azure-sdk-for-go --typespec-go-root=$(Build.SourcesDirectory)/autorest.go/packages/typespec-go --typespec-go-branch=$(Build.SourceBranchName)
-  #   displayName: 'Generate SDK'
-  #   workingDirectory: $(Build.SourcesDirectory)/azure-sdk-for-go
+  - script: |
+      python3 $(Build.SourcesDirectory)/autorest.go/eng/scripts/sdk_regenerate.py --sdk-root=$(Build.SourcesDirectory)/azure-sdk-for-go --typespec-go-root=$(Build.SourcesDirectory)/autorest.go/packages/typespec-go --typespec-go-branch=$(Build.SourceBranchName) --use-latest-spec=$(UseLatestSpec)
+    displayName: 'Generate SDK'
+    workingDirectory: $(Build.SourcesDirectory)/azure-sdk-for-go
 
   - template: /eng/common/pipelines/templates/steps//create-pull-request.yml@azure-sdk-for-go
     parameters:
@@ -72,7 +69,7 @@ jobs:
       ScriptDirectory: $(Build.SourcesDirectory)/azure-sdk-for-go/eng/common/scripts
       RepoName: azure-sdk-for-go
       BaseBranchName: 'refs/heads/main'
-      PRBranchName: typespec-go-$(Build.SourceBranchName)
+      PRBranchName: typespec-go-regenerate-$(Build.SourceBranchName)
       CommitMsg: 'Regenerate SDK based on typespec-go branch $(Build.SourceBranchName)'
       PRTitle: '[Automation] Regenerate SDK based on typespec-go branch $(Build.SourceBranchName)'
       OpenAsDraft: 'true'
