--- a/eng/pipelines/sdk-regenerate.yml
+++ b/eng/pipelines/sdk-regenerate.yml
@@ -51,8 +51,8 @@ jobs:
     workingDirectory: $(Build.SourcesDirectory)/autorest.go
 
   - script: pnpm build
-    displayName: pnpm build
-    workingDirectory: $(Build.SourcesDirectory)/autorest.go/packages/typespec-go
+    displayName: pnpm build:all
+    workingDirectory: $(Build.SourcesDirectory)/autorest.go
 
   - script: pnpm pack
     displayName: pnpm pack
